--- a/Cyril_own_code_templates/05_pet_breeds_own_code.ipynb
+++ b/Cyril_own_code_templates/05_pet_breeds_own_code.ipynb
@@ -195,10 +195,38 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "--FHl4dFhzy4"
+      },
+      "source": [
+        "learn = cnn_learner(dls, resnet34, metrics=error_rate)\n",
+        "learn.fit_one_cycle(3, 3e-3)\n",
+        "learn.unfreeze()\n",
+        "learn.lr_find(suggest_funcs=(minimum, steep))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "aftrIJUw5q9n"
       },
       "source": [
-        ""
+        "learn = cnn_learner(dls, resnet34, metrics=error_rate)\n",
+        "learn.fit_one_cycle(3, 3e-3)\n",
+        "learn.unfreeze()\n",
+        "learn.fit_one_cycle(12, lr_max=slice(1e-6,1e-4))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S4bUpbC7fsOv"
+      },
+      "source": [
+        "learn.recorder.plot_loss()"
       ],
       "execution_count": null,
       "outputs": []
