--- a/Cyril_own_code_templates/05_pet_breeds_own_code.ipynb
+++ b/Cyril_own_code_templates/05_pet_breeds_own_code.ipynb
@@ -246,7 +246,29 @@
         "id": "nt0rCeNU5xkb"
       },
       "source": [
-        ""
+        "# Prepare DataBlock that will be used for each step below\n",
+        "pets = DataBlock(blocks = (ImageBlock, CategoryBlock),\n",
+        "                 get_items=get_image_files, \n",
+        "                 splitter=RandomSplitter(seed=42),\n",
+        "                 get_y=using_attr(RegexLabeller(r'(.+)_\\d+.jpg$'), 'name'),\n",
+        "                 item_tfms=Resize(460),\n",
+        "                 batch_tfms=aug_transforms(size=224, min_scale=0.75))\n",
+        "\n",
+        "seed_value = 1988"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "apzKjON3pL3V"
+      },
+      "source": [
+        "set_seed(seed_value, True)\n",
+        "dls = pets.dataloaders(path/\"img-small\")\n",
+        "learn = cnn_learner(dls, resnet18, metrics=error_rate)\n",
+        "lr_min, lr_steep, lr_slide, lr_valley = learn.lr_find(suggest_funcs=(minimum, steep, slide, valley))"
       ],
       "execution_count": null,
       "outputs": []
